[gd_scene load_steps=3 format=3 uid="uid://umie4niudpsn"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_27ra0"]
[ext_resource type="FontFile" uid="uid://guxfo5onink" path="res://fonts/retrofont.ttf" id="1_lixa6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_27ra0")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_lixa6")
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="HighscoreLabel2" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.914931
anchor_right = 1.0
anchor_bottom = 0.0354938
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_lixa6")
theme_override_font_sizes/font_size = 24
text = "High score: 0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 8.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.858093, 0.20348, 0.46872, 1)
theme_override_fonts/font = ExtResource("1_lixa6")
theme_override_font_sizes/font_size = 35
button_mask = 3
text = "Puchale pa iniciar"

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
